<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.android.mystock.ui.optionalpages.FragmentMainOptional">
    <include
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        layout="@layout/top_navigation_marketbar"></include>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/optional_barbg"
        >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:padding="10dp"
            android:gravity="center"
            android:background="@drawable/main_tab_pressed"
            android:orientation="horizontal">

            <TextView
                style="@style/Text_gray_16"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="沪" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:gravity="center">

                <com.android.mystock.common.views.NumberTextView
                    android:id="@+id/text_zjcj"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:text="--"
                    android:textSize="22dip"
                    android:textStyle="bold" />

                <com.android.mystock.common.views.NumberTextView
                    android:id="@+id/text_zde"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="--"
                    android:textSize="14dip" />

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <LinearLayout
                android:id="@+id/btn_news"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/main_tab_pressed"
                android:gravity="center"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/ico_xinwengonggao" />

                <TextView
                    style="@style/Text_gray_14"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="5dip"
                    android:text="@string/market_news" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/btn_report"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/main_tab_pressed"
                android:gravity="center"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/ico_yanjiubaogao" />

                <TextView
                    style="@style/Text_gray_14"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="5dip"
                    android:text="@string/market_report" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/btn_browser"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/main_tab_pressed"
                android:gravity="center"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/ico_zuijinliulan" />

                <TextView
                    style="@style/Text_gray_14"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="5dip"
                    android:text="@string/market_browser" />

            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <include layout="@layout/list_stock_title" />
    <View
        android:layout_width="match_parent"
        android:layout_height="0.3dp"
        android:background="@color/linebackground" />
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.android.mystock.common.views.smartisanpull.SmartisanRefreshableListView
            android:id="@+id/refresh_root"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ListView
                android:id="@+id/mystocklistview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:divider="@color/linebackground"
                android:dividerHeight="0.5dp"></ListView>
        </com.android.mystock.common.views.smartisanpull.SmartisanRefreshableListView>

        <LinearLayout
            android:id="@+id/add_stock_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="vertical"
            android:visibility="gone">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/zixuan_add" />

        </LinearLayout>
    </FrameLayout>
</LinearLayout>
